lambda/tests/compile-fail/non-async-main.rs
use lambda::lambda;

#[lambda]
#[tokio::main]
fn main() {}
